Fix some version incompatibilities